force-app/main/default/objects/Exam__c/Exam__c.object-meta.xml
<CustomObject>
    <description>This object represents the various exams for subjects.</description>
    <label>Exam</label>
    <nameField>
        <displayFormat>EXAM-{00000}</displayFormat>
        <label>Exam Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>