force-app/main/default/objects/Exam__c/fields/Pass_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Pass_Percentage__c</fullName>
    <label>Pass Percentage</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>