force-app/main/default/objects/Exam__c/fields/Total_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Minutes__c</fullName>
    <label>Total Time Minutes</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>