force-app/main/default/objects/Exam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exam_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>Number_of_Questions__c</columns>
    <columns>Total_Marks__c</columns>
    <columns>Total_Time_Minutes__c</columns>
    <columns>Pass_Percentage__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>